Fix overlay search on mobile

--- a/content/themes/rollekino/sass/layout/_search-modal.scss
+++ b/content/themes/rollekino/sass/layout/_search-modal.scss
@@ -13,6 +13,10 @@
     display: block;
   }
 
+  > .container {
+    overflow: auto;
+  }
+
   .container {
     position: relative;
     width: 100%;
