--- a/content/themes/rollekino/sass/views/_search.scss
+++ b/content/themes/rollekino/sass/views/_search.scss
@@ -26,6 +26,10 @@ body.is-search-on .block-hero-movies .container .result-container,
 
     .loader {
       margin-top: 22rem;
+
+      @media (max-width: 600px) {
+        margin-top: 5rem;
+      }
     }
   }
 
@@ -65,6 +69,13 @@ body.is-search-on .block-hero-movies .container .result-container,
       margin: 0;
       padding: 0;
       text-align: left;
+    }
+
+    @media (max-width: 670px) {
+      ul,
+      ol {
+        width: 100%;
+      }
     }
   }
 
